# Agentic-AI-Job-Application-Copilot

./: .env.example  .gitignore  DASHBOARD_V2_PROMPT.md  Dockerfile  Makefile  PRIVACY.md  README.md  README_DEPLOYMENT.md  RUNBOOK.md  alembic.ini  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py
agents/core/: adapter.py  browser.py  celery_app.py  schema.py  tasks.py  unified.py
agents/discovery/: __init__.py
agents/greenhouse/: __init__.py  adapter.py  alerts.py  client.py  collector.py  parser.py  rot_checker.py
agents/integrations/: calendar.py  gmail.py
agents/lever/: adapter.py
agents/workday/: adapter.py
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_mvp_tables.py  0002_job_missed_runs.py  0003_dedupe_secondary_job_sources.py  2e23ad33dd24_entity_extraction_fields.py  33754bfe3950_add_user_and_userprofile_tables.py  5a1dd92fb9e3_data_quality_flags.py  5bba3d165adf_add_webhook_url.py  7f3695ba99c8_add_rbac_is_admin_to_users.py  8246d2a92305_add_webhook_url.py  91f05eceff83_add_user_is_admin.py
api/: __init__.py  auth.py  db.py  main.py  middleware.py  schemas.py
api/routers/: applications.py  boards.py  exports.py  jobs.py  metrics.py  runs.py  users.py
config/: __init__.py  loader.py  settings.example.yaml
dashboard/: README.md  next.config.ts  package-lock.json  package.json
dashboard-v2/: Dockerfile  next.config.ts  package-lock.json  package.json
dashboard-v2/.claude/: launch.json
dashboard-v2/src/app/: globals.css  layout.tsx
dashboard-v2/src/hooks/: useApplications.ts  useFollowUps.ts  useJobs.ts  useKeyboardNav.ts
dashboard/src/app/: page.tsx  (+2 more)
db/: __init__.py  models.py  session.py
documentation/: DATABASE_SCHEMA.md  HEALTH_AND_ALERTS.md  PROJECT_ARCHITECTURE.md  PROJECT_CONTEXT_PROMPT.md  README.md  SCHEDULER.md  methodology(kanban).md
documentation/tasks/: MASTER_ROADMAP.md  PHASE_01_RELIABILITY_AND_OPS.md  PHASE_02_DATA_AND_PIPELINE.md  PHASE_03_API_AND_BACKEND.md  PHASE_04_FRONTEND_AND_UX.md  PHASE_05_INTELLIGENCE_AND_CONTENT.md  PHASE_06_SECURITY_AND_COMPLIANCE.md  PHASE_07_PRODUCTION_AND_SCALE.md  README.md
extension/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  test.js
nginx/: nginx.conf
pipeline/: __init__.py  dedupe.py  extraction.py  filters.py  html_to_text.py  normalize_location.py  scoring.py  stale_jobs.py  webhooks.py
scheduler/: __init__.py  daemon.py  followup_daemon.py  run_daily.py
scripts/: export_user_data.py  run_scheduler.sh
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_alerts.py  test_dedupe.py  test_health.py
ui/: __init__.py
ui/pages/: __init__.py
(+54 files in other folders)
